[gd_scene load_steps=3 format=2]

[ext_resource path="res://CM/UI/DataInput/SingletonDictionary/SingletonDictItem.gd" type="Script" id=1]
[ext_resource path="res://CM/UI/DataInput/ValueSelector.gd" type="Script" id=2]

[node name="SingletonItem" type="HBoxContainer"]
margin_top = 24.0
margin_right = 28.0
margin_bottom = 48.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="."]
margin_left = 28.0
margin_top = 5.0
margin_right = 28.0
margin_bottom = 26.0

[node name="ValueLineEdit" type="LineEdit" parent="."]
margin_left = 32.0
margin_right = 192.0
margin_bottom = 31.0
rect_min_size = Vector2( 160, 0 )

[node name="ValueSelector" type="OptionButton" parent="."]
visible = false
margin_left = 196.0
margin_right = 356.0
margin_bottom = 36.0
rect_min_size = Vector2( 160, 0 )
script = ExtResource( 2 )

[node name="ValueCheckBox" type="CheckBox" parent="."]
visible = false
margin_left = 196.0
margin_right = 220.0
margin_bottom = 36.0

[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="text_changed" from="ValueLineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="item_selected" from="ValueSelector" to="." method="_on_ValueSelector_item_selected"]
[connection signal="toggled" from="ValueCheckBox" to="." method="_on_ValueCheckBox_toggled"]
